Fix git revert mess up
• Git revert messed up everything. Manually changed back to normal.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,6 +2,10 @@
 # styles.scss
 ---
 
+body {
+	background-color: #262626;
+}
+
 @font-face {
 	font-family: 'Avenir';
 	src: local("AvenirNext"),
